--- a/src/pages/article-page/Article.css
+++ b/src/pages/article-page/Article.css
@@ -83,7 +83,7 @@
 /* Button styling */
 .back-btn {
   display: inline-block;
-  margin-top: 3rem; /* Adds space between content and button */
+  margin-top: 2rem; /* Adds space between content and button */
   padding: 0.75rem 1.5rem;
   width: 80%;
   max-width: 10rem;
